- annotation layers are now added to layer controls; - annotation changes for USC demo; - scrollbar styling fix;

--- a/tile-client/src/main/webapp/css/annotations.css
+++ b/tile-client/src/main/webapp/css/annotations.css
@@ -181,12 +181,12 @@
 }
 
 .annotation-carousel-ui-chevron-left {
-    left: calc(50% - 50px);
+    left: calc(50% - 70px);
     background: transparent url(../images/chevron_L.png) no-repeat center top;
 }
 
 .annotation-carousel-ui-chevron-right {
-    right: calc(50% - 50px);
+    right: calc(50% - 70px);
     background: transparent url(../images/chevron_R.png) no-repeat center top;
 }
 
